fix terminal exit issue by using a platform non-daemon thread as opposed to using a virtual thread